--- a/index.html
+++ b/index.html
@@ -77,22 +77,22 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="/Images/Hand.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <img src="Images/Hand.png" alt="" class="Advantages--IMG d-flex justify-content-center">
                         <p class="text-center Advantages--Title">Receive your Order</p>
                         <p class="text-center Advantages--Description ">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="/Images/Money.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <img src="Images/Money.png" alt="" class="Advantages--IMG d-flex justify-content-center">
                         <p class="text-center Advantages--Title">Free Returns</p>
                         <p class="text-center Advantages--Description">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="/Images/Tree.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <img src="Images/Tree.png" alt="" class="Advantages--IMG d-flex justify-content-center">
                         <p class="text-center Advantages--Title">100% Organic Food</p>
                         <p class="text-center Advantages--Description">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
                     <div class="col-md-3">
-                        <img src="/Images/Cap.png" alt="" class="Advantages--IMG d-flex justify-content-center">
+                        <img src="Images/Cap.png" alt="" class="Advantages--IMG d-flex justify-content-center">
                         <p class="text-center Advantages--Title">Enjoy!</p>
                         <p class="text-center Advantages--Description">Pesto sauce zucchini jalapenos, halkidiki green olives Cherry a</p>
                     </div>
@@ -177,7 +177,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/Orange1.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/Orange1.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
@@ -194,7 +194,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/Straberry.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/Straberry.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
@@ -211,7 +211,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/Orange2.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/Orange2.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
@@ -228,7 +228,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/Graps.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/Graps.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
@@ -245,7 +245,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/Brocoli.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/Brocoli.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
@@ -262,7 +262,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/Bananna.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/Bananna.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
@@ -296,7 +296,7 @@
                     <div class="col-md-3">
                         <div class="border">
                             <!-- Images -->
-                            <img src="/Images/lamon.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
+                            <img src="Images/lamon.png" alt="" class="Product--Images me-auto ms-auto mt-5 mb-5">
                             <!-- Ratings -->
                             <div class="d-flex justify-content-center Products--Rating">
                                 <i class="fas fa-star"></i>
