--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
     <!-- Css... -->
     <!-- Custom css(Stylesheet) -->
-    <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="Css/style.css">
     <!-- Fontawesome css -->
-    <link rel="stylesheet" href="./Css/all.css">
+    <link rel="stylesheet" href="Css/all.css">
     <!-- Bootstrap css -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 </head>
@@ -115,7 +115,7 @@
             <div class="container">
                 <div class="row g-3">
                     <div class="col-md-4">
-                        <div class=" Categories--Card1">
+                        <div class="Categories--Card1">
                             <p class="Categories--CardTitle">Malta Slices</p>
                             <p class="Categories--CardQuantity">17 Products</p>
                             <button class="Categories--CardButton">Shop Now</button>
@@ -318,7 +318,7 @@
     </main>
 
     <!-- Fontawesome JavaScript  -->
-    <script src="./all.js"></script>
+    <script src="all.js"></script>
     <!-- Bootstrap Bundle JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
