--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£11.05</p>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£20.50</p>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£15.60</p>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£25.90</p>
                         </div>
                     </div>
@@ -272,7 +272,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£35.30</p>
                         </div>
                     </div>
@@ -289,7 +289,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£12.80</p>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                                 <i class="fas fa-star"></i>
                             </div>
                             <!-- Title and Price -->
-                            <p class="d-flex justify-content-center">Solid Basic Jumpsuit</p>
+                            <p class="d-flex justify-content-center Product--Title">Solid Basic Jumpsuit</p>
                             <p class="d-flex justify-content-center mb-4">£90.00</p>
                         </div>
                     </div>
