--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <!-- Products starts here... -->
         <section>
             <!-- Headings -->
-            <div class="container text-center mt-5 mb-5">
+            <div class="container text-center mt-5 pb-5">
                 <p class="Titles">Fresh Products</p>
                 <p class="Descriptions">We provide fresh and health food service</p>
             </div>
