--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
         <!-- Products starts here... -->
         <section>
             <!-- Headings -->
-            <div class="container text-center mt-5 pb-5">
+            <div class="container text-center mt-5 mb-5">
                 <p class="Titles">Fresh Products</p>
                 <p class="Descriptions">We provide fresh and health food service</p>
             </div>
             <!-- Headings -->
 
             <!-- Cards -->
-            <div class="container">
+            <div class="container mb-5">
                 <div class="row g-3">
                     <div class="col-md-3">
                         <div class="border">
