Readme updated and task complete

--- a/index.html
+++ b/index.html
@@ -29,30 +29,30 @@
     <nav class="container mt-2 mb-2">
         <div class="row">
             <!-- Category -->
-            <div class="col-md-1 d-flex justify-content-center">
+            <div class="col-md-1 d-flex justify-content-center mt-2 mb-2">
                 <i class="fas fa-bars NavIcon1"></i>&nbsp;
                 <p class="Nav--Category"> Category </p>&nbsp;
                 <i class="fas fa-angle-down NavIcon2"></i>
             </div>
             <!-- Category -->
-            <div class="col-md-1 d-flex justify-content-center Navigations">
+            <div class="col-md-1 d-flex justify-content-center Navigations mt-2 mb-2">
                 <p class="Nav--Navigations">NEW ARRIVAL</p>
             </div>
-            <div class="col-md-1 d-flex justify-content-center">
+            <div class="col-md-1 d-flex justify-content-center mt-2 mb-2">
                 <p class="Nav--Navigations">TODAYS DEALS</p>
             </div>
-            <div class="col-md-1 d-flex justify-content-center">
+            <div class="col-md-1 d-flex justify-content-center mt-2 mb-2">
                 <p class="Nav--Navigations">FLASH SALES</p>
             </div>
             <!-- Logo -->
-            <div class="col-md-4 d-flex justify-content-center">
+            <div class="col-md-4 d-flex justify-content-center mt-2 mb-2">
                 <p class="Nav--Store">STORE <span class="Nav--X">X</span></p>
             </div>
             <!-- Logo -->
-            <div class="col-md-1 ms-auto d-flex justify-content-center Nav--SearchIcon">
+            <div class="col-md-1 ms-auto d-flex justify-content-center Nav--SearchIcon mt-2 mb-2">
                 <i class="fas fa-search"></i>
             </div>
-            <div class="col-md-1 d-flex justify-content-center Nav--CartIcon">
+            <div class="col-md-1 d-flex justify-content-center Nav--CartIcon mt-2 mb-2">
                 <i class="fas fa-shopping-basket Nav--Cart"></i>
                 <div class="Nav--CartNumber">0</div>
             </div>
