Pixel Perfection Complete

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <body>
     <!-- Navbar starts here... -->
-    <nav class="container mt-2 mb-2">
+    <nav class="container">
         <div class="row">
             <!-- Category -->
             <div class="col-md-1 d-flex justify-content-center mt-2 mb-2">
